--- a/pdfdeblanker/pom.xml
+++ b/pdfdeblanker/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.peng.internal</groupId>
   <artifactId>pdfdeblanker</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>v1.0</version>
   <packaging>jar</packaging>
 
   <name>pdfdeblanker</name>
